[package]
name = "tokio-u8-codec"
description = "A Tokio codec that just reads and writes u8s"
readme = "README.md"
version = "0.1.0"
authors = ["Paul Kernfeld <paulkernfeld@gmail.com>"]
license = "MIT/Apache-2.0"
documentation = "https://crates.io/crates/tokio-u8-codec"
repository = "https://github.com/paulkernfeld/tokio-u8-codec"

[dependencies]
bytes    = "0.4"
tokio-io = "0.1"
